--- a/MASLOW/MASLOW.csproj
+++ b/MASLOW/MASLOW.csproj
@@ -14,6 +14,9 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="AspNetCore.Identity.MongoDbCore" Version="3.1.1" />
+    <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="5.0.4" />
+    <PackageReference Include="Microsoft.AspNetCore.Identity" Version="2.2.0" />
     <PackageReference Include="Microsoft.AspNetCore.SpaServices.Extensions" Version="5.0.4" />
     <PackageReference Include="MongoDB.Driver" Version="2.12.0" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.1.1" />
