Add mongo identitiy and JWT auth

--- a/MASLOW/appsettings.json
+++ b/MASLOW/appsettings.json
@@ -1,10 +1,22 @@
 {
   "Logging": {
-      "LogLevel": {
+    "LogLevel": {
       "Default": "Information",
       "Microsoft": "Warning",
       "Microsoft.Hosting.Lifetime": "Information"
-      }
-    },
-"AllowedHosts": "*"
+    }
+  },
+  "AllowedHosts": "*",
+
+  "MongoDBSettings": {
+    "ConnectionString": "mongodb://127.0.0.1:27017",
+    "Database": "MASLOW"
+  },
+  "JWTSettings": {
+    "SecurityKey": "QiMJwjxiAFE5qDt9Sn2PSrF7LXWA6Qyx",
+    "ExpiryInMinutes": 3600,
+    "ValidIssuer": "MASLOW",
+    "ValidAudience": "MASLOW"
+  }
+
 }
