Add mongo wrapper

--- a/MASLOW/appsettings.json
+++ b/MASLOW/appsettings.json
@@ -10,7 +10,7 @@
 
   "MongoDBSettings": {
     "ConnectionString": "mongodb://127.0.0.1:27017",
-    "Database": "MASLOW"
+    "DatabaseName": "MASLOW"
   },
   "JWTSettings": {
     "SecurityKey": "QiMJwjxiAFE5qDt9Sn2PSrF7LXWA6Qyx",
