--- a/MASLOW/MASLOW.csproj
+++ b/MASLOW/MASLOW.csproj
@@ -19,6 +19,7 @@
     <PackageReference Include="Microsoft.AspNetCore.SpaServices" Version="3.1.13" />
     <PackageReference Include="Microsoft.AspNetCore.SpaServices.Extensions" Version="5.0.4" />
     <PackageReference Include="MongoDB.Driver" Version="2.12.1" />
+    <PackageReference Include="MongoDB.Entities" Version="20.9.1" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.1.1" />
   </ItemGroup>
 
