--- a/MASLOW/ClientApp/package.json
+++ b/MASLOW/ClientApp/package.json
@@ -21,6 +21,7 @@
     "@angular/platform-browser-dynamic": "11.2.7",
     "@angular/platform-server": "11.2.7",
     "@angular/router": "11.2.7",
+    "@nguniversal/aspnetcore-engine": "^11.2.1",
     "@nguniversal/module-map-ngfactory-loader": "8.1.1",
     "aspnet-prerendering": "^3.0.1",
     "bootstrap": "^4.3.1",
