--- a/MASLOW/ClientApp/package.json
+++ b/MASLOW/ClientApp/package.json
@@ -22,6 +22,7 @@
     "@angular/platform-server": "11.2.7",
     "@angular/router": "11.2.7",
     "@nguniversal/aspnetcore-engine": "^11.2.1",
+    "@nguniversal/common": "^11.2.1",
     "@nguniversal/module-map-ngfactory-loader": "8.1.1",
     "aspnet-prerendering": "^3.0.1",
     "bootstrap": "^4.3.1",
@@ -52,7 +53,6 @@
     "typescript": "4.1.5"
   },
   "optionalDependencies": {
-    "node-sass": "^5.0.0",
     "protractor": "~5.4.2",
     "ts-node": "~8.4.1",
     "tslint": "~5.20.0"
