--- a/MASLOW/ClientApp/package.json
+++ b/MASLOW/ClientApp/package.json
@@ -52,6 +52,7 @@
     "karma-coverage-istanbul-reporter": "~3.0.2",
     "karma-jasmine": "~4.0.0",
     "karma-jasmine-html-reporter": "^1.5.0",
+    "schematics-scss-migrate": "^1.3.13",
     "typescript": "4.1.5"
   },
   "optionalDependencies": {
