--- a/MASLOW/MASLOW.csproj
+++ b/MASLOW/MASLOW.csproj
@@ -30,6 +30,11 @@
     <None Include="$(SpaRoot)**" Exclude="$(SpaRoot)node_modules\**" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\MASLOW.Entities\MASLOW.Entities.csproj" />
+    <ProjectReference Include="..\MASLOW.TheKeys\MASLOW.TheKeys.csproj" />
+  </ItemGroup>
+
   <Target Name="DebugEnsureNodeEnv" BeforeTargets="Build" Condition=" '$(Configuration)' == 'Debug' And !Exists('$(SpaRoot)node_modules') ">
     <!-- Ensure Node.js is installed -->
     <Exec Command="node --version" ContinueOnError="true">
