--- a/MASLOW.NET/MASLOW/MASLOW.csproj
+++ b/MASLOW.NET/MASLOW/MASLOW.csproj
@@ -31,6 +31,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\MASLOW.Android\MASLOW.Arduino.csproj" />
     <ProjectReference Include="..\MASLOW.Entities\MASLOW.Entities.csproj" />
     <ProjectReference Include="..\MASLOW.TheKeys\MASLOW.TheKeys.csproj" />
   </ItemGroup>
