Add default object in db

--- a/MASLOW.NET/MASLOW/MASLOW.csproj
+++ b/MASLOW.NET/MASLOW/MASLOW.csproj
@@ -34,6 +34,7 @@
     <ProjectReference Include="..\MASLOW.Android\MASLOW.Arduino.csproj" />
     <ProjectReference Include="..\MASLOW.Entities\MASLOW.Entities.csproj" />
     <ProjectReference Include="..\MASLOW.TheKeys\MASLOW.TheKeys.csproj" />
+    <ProjectReference Include="..\MASLOW.Tuya\MASLOW.Tuya.csproj" />
   </ItemGroup>
 
   <Target Name="DebugEnsureNodeEnv" BeforeTargets="Build" Condition=" '$(Configuration)' == 'Debug' And !Exists('$(SpaRoot)node_modules') ">
